--- a/Gun1/1_6_PackageModuleKavrami.ipynb
+++ b/Gun1/1_6_PackageModuleKavrami.ipynb
@@ -39,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Abdullah\\\\Documents\\\\GitHub\\\\PythonEsaslari_20240506\\\\Gun4'"
+       "'c:\\\\Users\\\\Abdullah\\\\Documents\\\\GitHub\\\\KTMLwPython_20240603\\\\Gun1'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Abdullah\\\\Documents\\\\GitHub\\\\PythonEsaslari_20240506\\\\Gun4\\\\py_custom_package'"
+       "'c:\\\\Users\\\\Abdullah\\\\Documents\\\\GitHub\\\\KTMLwPython_20240603\\\\Gun1\\\\py_custom_package'"
       ]
      },
      "execution_count": 5,
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        " 'sekiller_paleti']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "['kare', 'daire', 'üçgen']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -383,16 +383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'py_custom_package' from 'c:\\\\Users\\\\Abdullah\\\\Documents\\\\GitHub\\\\PythonEsaslari_20240506\\\\Gun4\\\\py_custom_package\\\\__init__.py'>"
+       "<module 'py_custom_package' from 'c:\\\\Users\\\\Abdullah\\\\Documents\\\\GitHub\\\\KTMLwPython_20240603\\\\Gun1\\\\py_custom_package\\\\__init__.py'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "['Ali', 'Veli', 'Ayşe']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "'py_custom_package'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
