--- a/Gun1/1_7_DosyalarlaCalismak_open_csv_json.ipynb
+++ b/Gun1/1_7_DosyalarlaCalismak_open_csv_json.ipynb
@@ -584,28 +584,306 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#soru:\n",
+    "#her çalıştırıldığnda bilgisayar adı, kullanıcı adı, ve tarihi dosyay yazsın. Aşağıdaki formatta yazsın.\n",
+    "#COMUTERNAME - USERNAME - Tarih\n",
+    "import os, datetime\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#\n",
+    "metin = \"{};{};{}\".format(os.getenv(\"COMPUTERNAME\"),\n",
+    "                          os.getenv(\"USERNAME\"),\n",
+    "                          datetime.datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "                          )\n",
+    "\n",
+    "#metin\n",
+    "with open(\"./databases/hareketler.txt\",\"a+\",encoding=\"UTF-8\") as fh:\n",
+    "    fh.write(metin+\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#örn. Bir dosyadaki bilgiyi başka bir dosyaya özetleyelm.\n",
+    "#\\ ile alt satırdan devam edebildikten.\n",
+    "with open(\"./databases/hareketler.txt\",\"r\",encoding=\"UTF-8\") as fs,\\\n",
+    "     open(\"./databases/hareketlerSummary.txt\",\"w\",encoding=\"UTF-8\") as fd:\n",
+    "     \n",
+    "     #2'şer satır atlasın\n",
+    "     for satir in fs.readlines()[::2]:\n",
+    "        yeniSatir = \";\".join(satir.split(\";\")[1:])\n",
+    "        fd.write(yeniSatir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CSV ile Çalışmak\n",
+    "* csv kütüpahanesi her satırı delimiter ile ayrılmış elemanlardan oluşan bir liste olarak yazma okuma imkanı verir.\n",
+    "* dosyalarla ham şekilde çalışırken open ile açıyorduk fakat delimiter veremiyorduk. Düze metnlerle çalışıyorduk.\n",
+    "    * split veya join fonksiyonları kullanarak buradaki problemleri kısmen çözebiliriz."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### csv olarak yazalım"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oyuncular = [\"Ali\",\"Veli\",\"Ayşe\",\"Fatma\"]\n",
+    "skor = [random.randint(0,100), \n",
+    "        datetime.datetime.now().strftime(\"%H:%M:%S\"),\n",
+    "        random.choice(oyuncular)]\n",
+    "\n",
+    "\n",
+    "#\n",
+    "with open(\"./databases/skor.csv\",\"a\", encoding=\"UTF-8\") as fw:\n",
+    "    csv.writer(fw,delimiter=\",\") \\\n",
+    "       .writerow(skor) #skor listesindeki elemanları belirtilen ayraç ile yazdırır."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### csv olarak okuyalım"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A** -> 10\n",
+      "A** -> 92\n",
+      "V** -> 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"./databases/skor.csv\",\"r\", encoding=\"UTF-8\") as fr:\n",
+    "    for satir in csv.reader(fr,delimiter=\",\"):\n",
+    "        #print(satir)\n",
+    "        if satir: #boş ise False döner\n",
+    "            #print(satir)\n",
+    "            print(f\"{satir[2]:.1s}** -> {satir[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### json veriler çalışmak\n",
+    "* Json veri tipi bir çok platformda kullanılan veri tipidir. Özelikle web servislerinde sıkça kullanılır.\n",
+    "* json verileri python'da dict gibi kullanılabilir. Python nesnelerine çevirilebilir. (parse)\n",
+    "* Python nesneleri de json verisine çevrilebilir. (stringify) (dump)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### json metnini python nesnesine çevirelim (parse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Abdullah'"
+       "str"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#soru:\n",
-    "#her çalıştırıldığnda bilgisayar adı, kullanıcı adı, ve tarihi dosyay yazsın. Aşağıdaki formatta yazsın.\n",
-    "#COMUTERNAME - USERNAME - Tarih\n",
-    "import os\n",
+    "#json metinleri python dictlerine benzer fakat fatlıdır. mesela python True json da true olarak yazılır.\n",
+    "str_json = \"\"\"\n",
+    "{\n",
+    "    \"name\":\"Ali\",\n",
+    "    \"surname\":\"Veli\",\n",
+    "    \"age\": 25,\n",
+    "    \"isStudent\": true,\n",
+    "    \"grades\": [100,90,80]\n",
+    "}\n",
+    "\"\"\"\n",
     "\n",
-    "os.getenv(\"COMPUTERNAME\")\n",
-    "os.getenv(\"USERNAME\")\n"
+    "type(str_json) #str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#parse edelim\n",
+    "py_json = json.loads(str_json) #dict\n",
+    "\n",
+    "type(py_json) #dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_json[\"name\"]\n",
+    "py_json[\"grades\"][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### python nesnesini json metinlerine çevirelim (dump)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_personel = {\n",
+    "                    \"Ad\":\"Ali\",\n",
+    "                    \"Yas\":123,\n",
+    "                    \"Maas\": 12345.67,\n",
+    "                    \"Ehliyetler\":[\"B\",\"D\"],\n",
+    "                    \"EvlilikDurumu\":True\n",
+    "}\n",
+    "\n",
+    "type(dict_personel) #dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json_personel  =json.dumps(dict_personel) #str\n",
+    "\n",
+    "type(json_personel) #str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"Ad\": \"Ali\", \"Yas\": 123, \"Maas\": 12345.67, \"Ehliyetler\": [\"B\", \"D\"], \"EvlilikDurumu\": true}'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json_personel"
    ]
   }
  ],
