--- a/Gun2/2_2_webIsleri_urlretrieve_urlopen_equest_BeatifulSoup.ipynb
+++ b/Gun2/2_2_webIsleri_urlretrieve_urlopen_equest_BeatifulSoup.ipynb
@@ -488,14 +488,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full Stack Developer - Django & Vue.js --> /jobs/7601/\n",
+      "Senior Python Backend Engineer --> /jobs/7598/\n",
+      "Python developer --> /jobs/7597/\n",
+      "Senior Python Engineer (ML) --> /jobs/7596/\n",
+      "Senior Python Software Developer --> /jobs/7595/\n",
+      "Senior Python Architect and Tech Lead --> /jobs/7594/\n",
+      "Mid-Level Python Engineer (Django Specialist) --> /jobs/7591/\n",
+      "Senior software engineer --> /jobs/7590/\n",
+      "Senior Back-End Engineer --> /jobs/7588/\n",
+      "Machine Learning Data Scientist --> /jobs/7587/\n",
+      "Software Engineer for AI Training Data (Python) --> /jobs/7586/\n",
+      "Python dev with Rust experience --> /jobs/7585/\n",
+      "Senior Software Engineer --> /jobs/7584/\n",
+      "Senior Software Engineer (d/f/m) --> /jobs/7582/\n",
+      "Senior Python Engineer (d/m/f) --> /jobs/7580/\n",
+      "Principal Software Engineer (d/m/f) --> /jobs/7578/\n",
+      "Senior Software Engineer, Search Team (Full- Stack) --> /jobs/7569/\n",
+      "Senior Python Engineer --> /jobs/7568/\n",
+      "Engineering Manager (Python) --> /jobs/7567/\n",
+      "Senior Python Engineer  - Agent-Based & Generative AI, Social Media x Web3 (Full-time) --> /jobs/7566/\n",
+      "Python Software Engineer - Sales --> /jobs/7565/\n",
+      "Accountant --> /jobs/7562/\n",
+      "Principal Backend Engineer Threat --> /jobs/7556/\n",
+      "Senior Python Backend Engineer --> /jobs/7554/\n",
+      "Data Scientist P3, Rome, Italy --> /jobs/7553/\n"
+     ]
+    }
+   ],
    "source": [
     "#Soru:\n",
     "#iş ilanlarını getirelim.\n",
     "#https://www.python.org/jobs/\n",
-    "#<a href=\"/jobs/7601/\">Full Stack Developer - Django &amp; Vue.js</a>\n"
+    "#<a href=\"/jobs/7601/\">Full Stack Developer - Django &amp; Vue.js</a>\n",
+    "for o in soup.body.section(\"h2\"): #sayfalama kısmı da li içerisinde olduğu için h2 içerisindeki a etiketlerini alalım.\n",
+    "    #print(o.a.string)\n",
+    "    #print(o.a[\"href\"])\n",
+    "    print(\"{} --> {}\".format(o.a.string, o.a[\"href\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Birden Fazla Etikete Ulaşma (find ve find_all)\n",
+    "![alt text](Bs4BirdenFazlaEtiket.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### find\n",
+    "* sayfanın tamamında bir şey arar ve varsa ilk bulduğunu getirir.\n",
+    "* `.find(name=None, attrs={}, recursive=True, text=None, **kwargs)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['welcome-message']"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h2_ilk = soup.find(name=\"h2\") #bütün sayfada ara ilkini getirir.\n",
+    "\n",
+    "#\n",
+    "h2_ilk\n",
+    "\n",
+    "#\n",
+    "h2_ilk.text #altındaki tüm etiketlerin metnini getirir.\n",
+    "\n",
+    "#\n",
+    "#attributelerine bakalım\n",
+    "h2_ilk.attrs\n",
+    "h2_ilk[\"class\"]\n",
+    "h2_ilk.get(\"class\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### find_all\n",
+    "* sayfanın tamamında bir şey arar ve tümünü getirir.\n",
+    "* `find_all(name, attrs, recursive, string, limit, **kwargs)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#content\n",
+      "#python-network\n",
+      "/\n",
+      "https://www.python.org/psf/\n",
+      "https://docs.python.org\n"
+     ]
+    }
+   ],
+   "source": [
+    "#örn:\n",
+    "#a etiketlerinin linklerini getirelim\n",
+    "for a in soup.find_all(name=\"a\", limit=5): #limit = 5 ile 5 tane getir dedik.\n",
+    "    print(a.get(\"href\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Make Text Smaller\n",
+      "Make Text Larger\n",
+      "Reset any font size changes I have made\n",
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "#attribute değerine göre arama\n",
+    "arananlar = soup.find_all(name=\"li\", class_=\"tier-2\",limit=5) #class reserve bir kelime olduğu için parametre adı class_ olarak tanımlanmış.\n",
+    "arananlar = soup.find_all(name=\"li\", attrs={\"class\":\"tier-2\"}, limit=5)\n",
+    "\n",
+    "for l in arananlar:\n",
+    "    print(l.a.get(\"title\")) #title attributelerini çektik."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://www.w3schools.com/html/html_tables.asp\n",
+    "#http://www.koeri.boun.edu.tr/scripts/lst7.asp"
    ]
   }
  ],
